[gd_scene load_steps=8 format=2]

[ext_resource path="res://Text/Arimo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Graphics/Icons/DropdownArrow.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CustomSpinBox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_width_top = 4
border_color = Color( 0.721569, 0.721569, 0.721569, 1 )
border_blend = true
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
border_width_top = 4
border_color = Color( 0.392157, 0.392157, 0.392157, 1 )
border_blend = true
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[node name="CustomSpinBox" type="LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1204.0
margin_bottom = -688.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 2 )
text = "0"
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 4 )

[node name="Up" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 20.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Up"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_right = 20.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Down"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[connection signal="text_changed" from="." to="." method="_on_CustomSpinBox_text_changed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
